cluster/apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: bt-tcp
      port: 6881
      targetPort: 6881
      protocol: TCP
    - name: bt-udp
      port: 6881
      targetPort: 6881
      protocol: UDP
